sbuild (0.58.2-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * etc/50sbuild: Don't create user home directory inside the build
    chroot.  Home directories are not required for building.

 -- Roger Leigh <rleigh@debian.org>  Sun, 29 Mar 2009 22:05:29 +0100

sbuild (0.58.1-1) unstable; urgency=low

  [ Roger Leigh ]
  * debian/rules: Run configure setting DCMD, SUDO and SCHROOT.
    (Closes: #519097). It's not possible to install sudo as a
    build-dependency due to it not allowing automatic removal, and
    none of the commands are actually needed for the build, just
    setting the default path.
  * sbuild: Don't erase default chroot environment (Closes: #519276).
    This removed APT_CONFIG, preventing sbuild from working correctly.
    Thanks to Francois-Denis Gonthier. 

 -- Roger Leigh <rleigh@debian.org>  Wed, 11 Mar 2009 23:16:41 +0000

sbuild (0.58.0-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * debian/rules:
    - Clean up old unused code.
    - Correct patching of config.status and config.guess.
    - Add functional binary-arch target.
    - Use dh_prep in place of dh_clean -k.
    - Don't configure with --with-postgresql (debversion code moved
      to postgresql-debversion).
  * debian/compat: Update to debhelper version 7.
  * debian/control:
    - Build-Depend on debhelper 7.
    - wanna-build recommends postgresql-8.3-debversion.
  * debian/NEWS: Document incompatible changes from previous versions.
  * debian/sbuild.docs: New file.  Add NEWS.
  * debian/wanna-build.docs: New file.  Add NEWS.
  * buildd-mail-wrapper: Use more portable BSD getloadavg in place of
    Linux-specific sysinfo.  Thanks to Robert Millan for this
    patch (Closes: #511095).
  * wanna-build: --help output now documents --create-db, since --help
    now displays the full manual page (Closes: #511314).

  [ Kees Cook ]
  * lib/Sbuild.pm: always perform version checks on provided packages
    (Closes: #505747).
